force-app/main/default/objects/Analysis_Of_Legal__c/Analysis_Of_Legal__c.object-meta.xml
<CustomObject>
    <label>Analysis Of Legal</label>
    <nameField>
        <label>Nama</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analysis Of Legals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>