force-app/main/default/objects/Analysis_Of_Legal__c/fields/alamat__c.field-meta.xml
<CustomField>
    <fullName>alamat__c</fullName>
    <label>Alamat</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>