force-app/main/default/objects/Analysis_Of_Legal__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Analysis Of Legals</relationshipLabel>
    <relationshipName>Analysis_Of_Legals</relationshipName>
    <type>Lookup</type>
</CustomField>