force-app/main/default/objects/Analysis_Of_Legal__c/fields/nik__c.field-meta.xml
<CustomField>
    <fullName>nik__c</fullName>
    <label>NIK</label>
    <length>16</length>
    <type>Text</type>
</CustomField>