force-app/main/default/objects/Analysis_Of_Legal__c/fields/npwp__c.field-meta.xml
<CustomField>
    <fullName>npwp__c</fullName>
    <label>NPWP</label>
    <length>16</length>
    <type>Text</type>
</CustomField>