force-app/main/default/objects/Analysis_Of_Legal__c/validationRules/ID_Number_Must_16_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>ID_Number_Must_16_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(nik__c)),
    NOT(REGEX(nik__c, &quot;^[0-9]{16}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>nik__c</errorDisplayField>
    <errorMessage>Please input 16 digit number only.</errorMessage>
</ValidationRule>