force-app/main/default/objects/Analysis_Of_Legal__c/validationRules/KK_Number_Must_16_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>KK_Number_Must_16_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(nomor_kartu_keluarga__c)),
NOT(REGEX(nomor_kartu_keluarga__c, &quot;^[0-9]{16}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>nomor_kartu_keluarga__c</errorDisplayField>
    <errorMessage>Please input 16 digit number only.</errorMessage>
</ValidationRule>