force-app/main/default/objects/Analysis_Of_Legal__c/validationRules/NPWP_Number_Must_16_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>NPWP_Number_Must_16_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(npwp__c)),
    NOT(REGEX(npwp__c, &quot;^[0-9]{16}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>npwp__c</errorDisplayField>
    <errorMessage>Please input 16 digit number only.</errorMessage>
</ValidationRule>